# opengl_clion_test

./: .gitignore  CMakeLists.txt  README.md  main.cpp
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
